--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   app_usage: ^4.0.1
   flutter_overlay_window: ^0.5.0
   installed_apps: ^1.6.0
+  android_intent_plus: ^6.0.0
 
 dev_dependencies:
   flutter_test:
