--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  provider: ^5.0.0
-  flutter_bloc: ^7.1.0
+  provider: ^6.1.5+1
+  flutter_bloc: ^9.1.1
   equatable: ^2.0.7
   table_calendar: ^3.2.0
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   app_usage: ^4.0.1
   flutter_overlay_window: ^0.5.0
-  installed_apps: ^1.6.0
+  installed_apps: ^2.0.0
   android_intent_plus: ^6.0.0
+  usage_stats: ^1.3.1
+  flutter_background_service: ^5.0.1
+  permission_handler: ^12.0.1
+  flutter_local_notifications: ^19.5.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
