--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <!-- no use impeller ios -->
+        <meta-data android:name="io.flutter.embedding.android.EnableImpeller"
+            android:value="false" />
         <!-- To use overlay window, write this -->
         <service android:name="flutter.overlay.window.flutter_overlay_window.OverlayService"
             android:foregroundServiceType="specialUse">
